The Hollows/log.txt
Sun Feb 13 17:50:18 2022
Windows-10-10.0.22000
Ren'Py 7.4.11.2266
 

Bootstrap to the start of init.init took 0.16s
Early init took 0.01s
Loader init took 0.05s
Loading error handling took 0.04s
Loading script took 0.54s
Loading save slot metadata. took 0.06s
Loading persistent took 0.03s

File "game/Chapter3.rpy", line 71: expected statement.
    asktime += 1
            ^
DPI scale factor: 1.500000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Interface start took 0.30s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'ATI Technologies Inc.'
Renderer: 'AMD Radeon(TM) Vega 8 Graphics'
Version: '4.6.14830 Compatibility Profile Context 21.10 27.20.21026.3004'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 16.22s
Early init took 0.00s
Loader init took 0.04s
Loading error handling took 0.04s
Loading script took 0.59s
Loading save slot metadata. took 0.05s
Loading persistent took 0.02s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.10s
Loading analysis data took 0.04s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\VerdouwRowan\\AppData\\Roaming/RenPy/backups\\The Hollows':
Dump and make backups. took 0.14s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.08s
DPI scale factor: 1.500000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.10s
Build styles took 0.01s
Load screen analysis took 0.00s
Analyze screens took 0.03s
Save screen analysis took 0.05s
Prepare screens took 0.12s
Save pyanalysis. took 0.07s
Save bytecode. took 0.02s
Running _start took 0.01s
Performance test:
Interface start took 0.11s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'ATI Technologies Inc.'
Renderer: 'AMD Radeon(TM) Vega 8 Graphics'
Version: '4.6.14830 Compatibility Profile Context 21.10 27.20.21026.3004'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 18.70s
Early init took 0.00s
Loader init took 0.04s
Loading error handling took 0.03s
Loading script took 0.26s
Loading save slot metadata. took 0.08s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.07s
Loading analysis data took 0.04s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Dump and make backups. took 0.13s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.10s
DPI scale factor: 1.500000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.11s
Build styles took 0.01s
Load screen analysis took 0.04s
Analyze screens took 0.00s
Save screen analysis took 0.00s
Prepare screens took 0.13s
Save pyanalysis. took 0.00s
Save bytecode. took 0.00s
Running _start took 0.00s
Performance test:
Interface start took 0.13s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'ATI Technologies Inc.'
Renderer: 'AMD Radeon(TM) Vega 8 Graphics'
Version: '4.6.14830 Compatibility Profile Context 21.10 27.20.21026.3004'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096

Full traceback:
  File "game/script.rpy", line 79, in script call
    call chapter1
  File "game/Chapter1.rpy", line 5, in script call
    "We've been driving for hours, the three of us.
  File "game/Chapter3.rpy", line 72, in script
    if (asktime = 3):
  File "renpy/ast.py", line 1898, in execute
    if renpy.python.py_eval(condition):
  File "renpy/python.py", line 2274, in py_eval
    code = py_compile(code, 'eval')
  File "renpy/python.py", line 835, in py_compile
    raise e
SyntaxError: invalid syntax (Chapter3.rpy, line 72)

While running game code:
  File "game/script.rpy", line 79, in script call
    call chapter1
  File "game/Chapter1.rpy", line 5, in script call
    "We've been driving for hours, the three of us.
  File "game/Chapter3.rpy", line 72, in script
    if (asktime = 3):
SyntaxError: invalid syntax (Chapter3.rpy, line 72)
Resetting cache.
Bootstrap to the start of init.init took 94.06s
Early init took 0.00s
Loader init took 0.06s
Loading error handling took 0.03s
Loading script took 0.32s
Loading save slot metadata. took 0.08s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.09s
Loading analysis data took 0.06s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\VerdouwRowan\\AppData\\Roaming/RenPy/backups\\The Hollows':
Dump and make backups. took 0.14s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.11s
DPI scale factor: 1.500000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.13s
Build styles took 0.01s
Load screen analysis took 0.00s
Analyze screens took 0.04s
Save screen analysis took 0.08s
Prepare screens took 0.16s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.13s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'ATI Technologies Inc.'
Renderer: 'AMD Radeon(TM) Vega 8 Graphics'
Version: '4.6.14830 Compatibility Profile Context 21.10 27.20.21026.3004'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 172.23s
Early init took 0.00s
Loader init took 0.07s
Loading error handling took 0.06s
Loading script took 0.43s
Loading save slot metadata. took 0.29s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.09s
Loading analysis data took 0.07s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\VerdouwRowan\\AppData\\Roaming/RenPy/backups\\The Hollows':
Dump and make backups. took 0.17s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.13s
DPI scale factor: 1.500000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.13s
Build styles took 0.01s
Load screen analysis took 0.00s
Analyze screens took 0.04s
Save screen analysis took 0.09s
Prepare screens took 0.14s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.13s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'ATI Technologies Inc.'
Renderer: 'AMD Radeon(TM) Vega 8 Graphics'
Version: '4.6.14830 Compatibility Profile Context 21.10 27.20.21026.3004'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 224.13s
Early init took 0.00s
Loader init took 0.04s
Loading error handling took 0.03s
Loading script took 0.27s
Loading save slot metadata. took 0.29s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.09s
Loading analysis data took 0.05s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Dump and make backups. took 0.16s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.11s
DPI scale factor: 1.500000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.11s
Build styles took 0.01s
Load screen analysis took 0.04s
Analyze screens took 0.00s
Save screen analysis took 0.00s
Prepare screens took 0.15s
Save pyanalysis. took 0.00s
Save bytecode. took 0.00s
Running _start took 0.00s
Performance test:
Interface start took 0.15s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'ATI Technologies Inc.'
Renderer: 'AMD Radeon(TM) Vega 8 Graphics'
Version: '4.6.14830 Compatibility Profile Context 21.10 27.20.21026.3004'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
